# table_tool

./: .gitignore  README.md  WIDGET_SETUP.md  pyproject.toml  requirements.txt
chrome_extension/: manifest.json  popup.html  popup.js
src/table_tool/: cli.py  custom_ops.py  server.py  sheet_client.py
